--- a/_view/controls/head.ejs
+++ b/_view/controls/head.ejs
@@ -11,4 +11,5 @@
 <%- include('ga') %>
 <script type="text/javascript" src="<%= Source_js %>jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="<%= Source_js %>highlight.pack.js"></script>
+<script type="text/javascript" src="<%= Source_js %>ash.js"></script>
 <%- DemoCss %>
