--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -3,9 +3,11 @@
 <head>
   <%- include('controls/head') %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="text/javascript" src='<%= Source_js %>svg_banner.js'></script>
+  <script type="text/javascript" src='<%= Source_js %>index.js'></script>
   <style>
   @media only screen and ( max-width: 500px) {
-.breadcrumbs {display: none;}
+    .breadcrumbs {display: none;}
   }
   </style>
 </head>
@@ -24,33 +26,24 @@
       </div>-->
       <!--content blocks -->
       <div class="block-wrapper">
-      <a class="sectionBlock" href="./prototypes/index.html">
-        <div class="block-a" style="background-image:url('<%= Source_img %><%= Version %>/prototype.svg'); background-position: -34px -23px; background-color:#F05424; "> 
-        <div class="block_cover">
-        <p class="list_title">Prototypes</p>
-        </div>
+        <a class="sectionBlock bg_orange" id='sectionBlock_prototype' href="./prototypes/index.html">
+          <div class="block-bg">
+              <%- include('controls/svg/index_prototype') %>
+          </div> 
+          <p class="list_title">Prototypes</p>
+        </a>
       </div>
-      </a>
+      <div class="block-wrapper2">
+          <a class="sectionBlock bg_yellow" href="./research/index.html">
+            <div class="block-bg" style="background-image:url('<%= Source_img %><%= Version %>/research.svg')"></div> 
+            <p class="list_title">RESEARCH & DEVELOPMENT</p>
+          </a>
+          <a class="sectionBlock bg_blue last_block" href="./team/index.html">
+            <div class="block-bg" style="background-image:url('<%= Source_img %><%= Version %>/team.svg')"></div>
+            <p class="list_title">TEAM MEMBERS</p>
+          </a>
       </div>
-      <div class="block-wrapper">
-      <a class="sectionBlock" href="./research/index.html">
-        <div class="block-l" style="background-image:url('<%= Source_img %><%= Version %>/research.svg')"> 
-        <div class="block_cover">
-        <p class="list_title">RESEARCH & DEVELOPMENT</p>
-        </div>
-        </div>
-      </a>
-      <a class="sectionBlock" href="./team/index.html">
-        <div class="block-r" style="background-image:url('<%= Source_img %><%= Version %>/team.svg')">
-        <div class="block_cover">
-        <p class="list_title">TEAM MEMBERS</p>
-        </div>
-      </div>
-      </a>
-      </div>
-      
     </div>
-    
   </div>
   </div>
   <!-- footer -->
