--- a/css/public.css
+++ b/css/public.css
@@ -24,7 +24,7 @@ ul,li{list-style: none; margin: 0px;}
 .breadcrumbs li+li::before{ content: '>'; color: #4F5051; margin-right: 5px; }
 .breadcrumbs li:last-child a{ text-decoration: none;}
 .content{ width: 100%; /* border-right: 1px solid #ccc; */ }
-.copyright {   width: 100%; margin: 80px auto; text-align: center;  color: #4F5051; font-size: 12px;}
+.copyright {   width: 100%; margin: 80px auto; text-align: center;  color: #4F5051; font-size: 12px;line-height: 18px;}
 
 /* header */
 .header { background-color: #fff; position: relative; width: 100%; margin: 0 auto; z-index: 3; }
@@ -150,7 +150,7 @@ ul,li{list-style: none; margin: 0px;}
   
   .wrapper {padding: 0 20px;}
   .breadcrumbs{ padding: 0 20px; margin: 0px; margin-top:30px; height: 50px;}
-  .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 3px; }
+  .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 3px; display: none; } /* display none added 081017
 
   .NavContent{ height: 40px;}
   .NavContent .Nav{ height: 40px; }
