--- a/css/detail.css
+++ b/css/detail.css
@@ -53,4 +53,5 @@ td,th{border:1px solid #ccc; padding: 0 14px;}
 	.article_header p span{position: absolute;left: 25px; top:5px;}
 	.article_body h4{margin-top: 20px!important;} 
 	.article_body p img[alt="mobile"],.article_body p img[alt="Desktop"],.article_body p img[alt="MX800"],.article_body p img[alt="SparkBoard"]{display: none;}
+	.article_body p img[alt="vpn_required"]{width: 80px;}
 }
