--- a/_view/controls/svg/index_team.ejs
+++ b/_view/controls/svg/index_team.ejs
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
     <title>team</title>
     <desc>Created with Sketch.</desc>
@@ -17,7 +16,7 @@
                 <polygon id="Fill-39" fill="#3E4959" points="55 172 80 172 80 165 55 165"></polygon>
                 <path d="M106.900537,68 C106.900537,89.633941 89.3660422,107.167734 67.7321012,107.167734 C46.0995627,107.167734 28.5622631,89.633941 28.5622631,68 C28.5622631,46.3653578 46.0995627,28.8322656 67.7321012,28.8322656 C89.3660422,28.8322656 106.900537,46.3653578 106.900537,68 Z" id="Fill-1" fill="#FFFFFF"></path>
                 <g id="Group" transform="translate(35.000000, 37.000000)">
-                    <g id="brain" transform="translate(1.000000, 1.000000)" fill="#F05424">
+                    <g id="svgBrain" transform="translate(1.000000, 1.000000)" fill="#F05424">
                         <path d="M30.1829229,6.90727041 L30.1829229,53.0866989 C30.1829229,55.9891294 28.245398,58.4343516 25.5827915,59.1895866 C25.379432,59.2421796 25.1872924,59.2807478 24.9657007,59.3221209 C24.746914,59.3712077 24.5042851,59.4006597 24.2413203,59.4125808 C24.1143959,59.4392279 23.9685381,59.4392279 23.8339001,59.4392279 C20.4623404,59.4392279 17.8305884,56.933699 17.519238,53.7269306 C16.6293651,54.1967611 15.5880244,54.4821656 14.5088167,54.4821656 C11.0110339,54.4821656 8.15839145,51.6393405 8.15839145,48.1205205 C8.15839145,47.3765054 8.31126167,46.6233741 8.54267072,45.958599 C8.4164476,45.958599 8.28741953,45.9656114 8.15839145,45.9656114 C4.66060864,45.9656114 1.8149786,43.1297987 1.8149786,39.6144849 C1.8149786,38.0591356 2.37456775,36.6566566 3.29529526,35.5465944 C1.33462951,34.4694904 0.0106892669,32.3861078 0.0106892669,29.9962834 C0.0106892669,27.3350794 1.65018731,25.0546484 3.97199141,24.1212986 C2.89348501,22.9810831 2.23081364,21.4411611 2.23081364,19.7532775 C2.23081364,16.2547935 5.08065112,13.4077609 8.57913518,13.4077609 L8.69554094,13.4077609 C8.53635957,12.8593916 8.44589967,12.2394959 8.44589967,11.6287162 C8.44589967,8.13163465 11.2985421,5.28390088 14.7963249,5.28390088 C15.7458033,5.28390088 16.7583931,5.51040126 17.5739347,5.88836937 C18.0563875,2.86392324 20.6811271,0.556143922 23.8339001,0.556143922 C27.3485126,0.556143922 30.1829229,3.39055413 30.1829229,6.90727041 Z" id="Fill-3"></path>
                         <path d="M39.6296012,0.556143922 C36.1128849,0.556143922 33.2770722,3.39055413 33.2770722,6.90727041 L33.2770722,53.0866989 C33.2770722,55.9891294 35.2181032,58.4343516 37.8821122,59.1895866 C37.8821122,59.1895866 37.8870209,59.1951965 37.8947345,59.1895866 C38.0840692,59.2421796 38.2790138,59.2807478 38.4949956,59.3221209 C38.7165873,59.3712077 38.9578137,59.4006597 39.222181,59.4125808 C39.3491053,59.4392279 39.4963656,59.4392279 39.6296012,59.4392279 C42.9997584,59.4392279 45.6336141,56.933699 45.9428607,53.7269306 L45.9428607,53.7199182 C46.8320325,54.1967611 47.8754769,54.4821656 48.9525808,54.4821656 C52.4538698,54.4821656 55.3051098,51.6393405 55.3051098,48.1205205 C55.3051098,47.3765054 55.1515383,46.6233741 54.919428,45.958599 C55.0484561,45.958599 55.1753805,45.9656114 55.3051098,45.9656114 C58.8021914,45.9656114 61.6506264,43.1297987 61.6506264,39.6144849 C61.6506264,38.0591356 61.0896347,36.6566566 60.1696085,35.5465944 C62.1316767,34.4694904 63.450007,32.3861078 63.450007,29.9962834 C63.450007,27.3350794 61.8140152,25.0546484 59.4908086,24.1212986 C60.5686138,22.9810831 61.2326876,21.4411611 61.2326876,19.7532775 C61.2326876,16.2547935 58.3807464,13.4077609 54.8815611,13.4077609 L54.7693628,13.4077609 C54.9271417,12.8593916 55.0176016,12.2394959 55.0176016,11.6287162 C55.0176016,8.13163465 52.1663616,5.28390088 48.6671763,5.28390088 C47.7141918,5.28390088 46.7044069,5.51040126 45.8902678,5.88836937 C45.4071137,2.86392324 42.7795692,0.556143922 39.6296012,0.556143922" id="Fill-19"></path>
                     </g>
@@ -41,33 +40,33 @@
                         <use xlink:href="#path-1"></use>
                     </mask>
                     <g id="Clip-36"></g>
-                    <polygon id="Fill-35" fill="#FFFFFF" mask="url(#mask-2)" points="66.733 7.454 68.729 7.454 68.729 0 66.733 0"></polygon>
-                    <polygon id="Fill-37" fill="#FFFFFF" mask="url(#mask-2)" points="52.6103 1.6963 54.5713 1.2753 56.1163 8.5753 54.1653 8.9863"></polygon>
-                    <polygon id="Fill-38" fill="#FFFFFF" mask="url(#mask-2)" points="39.1597 6.2851 40.9857 5.4731 44.0237 12.2841 42.1907 13.0971"></polygon>
-                    <polygon id="Fill-39" fill="#FFFFFF" mask="url(#mask-2)" points="26.9585 13.5693 28.5665 12.3963 32.9515 18.4323 31.3355 19.6053"></polygon>
-                    <polygon id="Fill-40" fill="#FFFFFF" mask="url(#mask-2)" points="16.5288 23.2422 17.8638 21.7572 23.4058 26.7442 22.0658 28.2302"></polygon>
-                    <polygon id="Fill-41" fill="#FFFFFF" mask="url(#mask-2)" points="8.3389 34.8623 9.3389 33.1333 15.7969 36.8603 14.7969 38.6043"></polygon>
-                    <polygon id="Fill-42" fill="#FFFFFF" mask="url(#mask-2)" points="2.751 47.9394 3.366 46.0394 10.455 48.3404 9.841 50.2454"></polygon>
-                    <polygon id="Fill-43" fill="#FFFFFF" mask="url(#mask-2)" points="0 61.8896 0.206 59.8916 7.616 60.6796 7.411 62.6636"></polygon>
-                    <polygon id="Fill-44" fill="#FFFFFF" mask="url(#mask-2)" points="0 74.1123 7.411 73.3383 7.616 75.3223 0.206 76.1083"></polygon>
-                    <polygon id="Fill-45" fill="#FFFFFF" mask="url(#mask-2)" points="2.751 88.0644 9.841 85.7654 10.455 87.6604 3.366 89.9624"></polygon>
-                    <polygon id="Fill-46" fill="#FFFFFF" mask="url(#mask-2)" points="8.3389 101.1396 14.7969 97.4116 15.7969 99.1436 9.3389 102.8686"></polygon>
-                    <polygon id="Fill-47" fill="#FFFFFF" mask="url(#mask-2)" points="16.5288 112.7646 22.0688 107.7746 23.4058 109.2596 17.8638 114.2466"></polygon>
-                    <polygon id="Fill-48" fill="#FFFFFF" mask="url(#mask-2)" points="26.9585 122.4297 31.3375 116.4007 32.9515 117.5677 28.5715 123.6037"></polygon>
-                    <polygon id="Fill-49" fill="#FFFFFF" mask="url(#mask-2)" points="39.1597 129.7168 42.1907 122.9078 44.0237 123.7218 40.9857 130.5308"></polygon>
-                    <polygon id="Fill-53" fill="#FFFFFF" mask="url(#mask-2)" points="91.4526 123.7216 93.2706 122.9086 96.3046 129.7166 94.4746 130.5316"></polygon>
-                    <polygon id="Fill-54" fill="#FFFFFF" mask="url(#mask-2)" points="102.5093 117.5674 104.1253 116.4004 108.5173 122.4294 106.8923 123.6034"></polygon>
-                    <polygon id="Fill-55" fill="#FFFFFF" mask="url(#mask-2)" points="112.0571 109.2597 113.3931 107.7767 118.9331 112.7617 117.6011 114.2467"></polygon>
-                    <polygon id="Fill-56" fill="#FFFFFF" mask="url(#mask-2)" points="119.6675 99.1435 120.6625 97.4165 127.1235 101.1395 126.1235 102.8695"></polygon>
-                    <polygon id="Fill-57" fill="#FFFFFF" mask="url(#mask-2)" points="125.0063 87.6601 125.6223 85.7681 132.7123 88.0641 132.0953 89.9631"></polygon>
-                    <polygon id="Fill-58" fill="#FFFFFF" mask="url(#mask-2)" points="127.8462 75.3271 128.0512 73.3441 135.4642 74.1121 135.2592 76.1081"></polygon>
-                    <polygon id="Fill-59" fill="#FFFFFF" mask="url(#mask-2)" points="127.8462 60.6806 135.2562 59.8916 135.4642 61.8896 128.0532 62.6656"></polygon>
-                    <polygon id="Fill-60" fill="#FFFFFF" mask="url(#mask-2)" points="125.0063 48.3418 132.0953 46.0388 132.7123 47.9398 125.6273 50.2448"></polygon>
-                    <polygon id="Fill-61" fill="#FFFFFF" mask="url(#mask-2)" points="119.6694 36.8642 126.1234 33.1372 127.1234 34.8662 120.6694 38.6042"></polygon>
-                    <polygon id="Fill-62" fill="#FFFFFF" mask="url(#mask-2)" points="112.0639 26.7441 117.6009 21.7571 118.9329 23.2421 113.3979 28.2301"></polygon>
-                    <polygon id="Fill-63" fill="#FFFFFF" mask="url(#mask-2)" points="102.5171 18.4326 106.8921 12.3996 108.5171 13.5736 104.1331 19.6056"></polygon>
-                    <polygon id="Fill-64" fill="#FFFFFF" mask="url(#mask-2)" points="91.4526 12.2822 94.4746 5.4772 96.3046 6.2852 93.2776 13.0942"></polygon>
-                    <polygon id="Fill-65" fill="#FFFFFF" mask="url(#mask-2)" points="79.3501 8.5752 80.8931 1.2782 82.8531 1.6962 81.2981 8.9862"></polygon>
+                    <polygon data-light id="Fill-35" fill="#FFFFFF" points="66.733 7.454 68.729 7.454 68.729 0 66.733 0"></polygon>
+                    <polygon data-light  id="Fill-37" fill="#FFFFFF" points="52.6103 1.6963 54.5713 1.2753 56.1163 8.5753 54.1653 8.9863"></polygon>
+                    <polygon data-light  id="Fill-38" fill="#FFFFFF" points="39.1597 6.2851 40.9857 5.4731 44.0237 12.2841 42.1907 13.0971"></polygon>
+                    <polygon data-light  id="Fill-39" fill="#FFFFFF" points="26.9585 13.5693 28.5665 12.3963 32.9515 18.4323 31.3355 19.6053"></polygon>
+                    <polygon data-light  id="Fill-40" fill="#FFFFFF" points="16.5288 23.2422 17.8638 21.7572 23.4058 26.7442 22.0658 28.2302"></polygon>
+                    <polygon data-light  id="Fill-41" fill="#FFFFFF" points="8.3389 34.8623 9.3389 33.1333 15.7969 36.8603 14.7969 38.6043"></polygon>
+                    <polygon data-light  id="Fill-42" fill="#FFFFFF" points="2.751 47.9394 3.366 46.0394 10.455 48.3404 9.841 50.2454"></polygon>
+                    <polygon data-light  id="Fill-43" fill="#FFFFFF" points="0 61.8896 0.206 59.8916 7.616 60.6796 7.411 62.6636"></polygon>
+                    <polygon data-light  id="Fill-44" fill="#FFFFFF" points="0 74.1123 7.411 73.3383 7.616 75.3223 0.206 76.1083"></polygon>
+                    <polygon data-light  id="Fill-45" fill="#FFFFFF" points="2.751 88.0644 9.841 85.7654 10.455 87.6604 3.366 89.9624"></polygon>
+                    <polygon data-light  id="Fill-46" fill="#FFFFFF" points="8.3389 101.1396 14.7969 97.4116 15.7969 99.1436 9.3389 102.8686"></polygon>
+                    <polygon data-light  id="Fill-47" fill="#FFFFFF" points="16.5288 112.7646 22.0688 107.7746 23.4058 109.2596 17.8638 114.2466"></polygon>
+                    <polygon data-light  id="Fill-48" fill="#FFFFFF" points="26.9585 122.4297 31.3375 116.4007 32.9515 117.5677 28.5715 123.6037"></polygon>
+                    <polygon data-light  id="Fill-49" fill="#FFFFFF" points="39.1597 129.7168 42.1907 122.9078 44.0237 123.7218 40.9857 130.5308"></polygon>
+                    <polygon data-light  id="Fill-53" fill="#FFFFFF" points="91.4526 123.7216 93.2706 122.9086 96.3046 129.7166 94.4746 130.5316"></polygon>
+                    <polygon data-light  id="Fill-54" fill="#FFFFFF" points="102.5093 117.5674 104.1253 116.4004 108.5173 122.4294 106.8923 123.6034"></polygon>
+                    <polygon data-light  id="Fill-55" fill="#FFFFFF" points="112.0571 109.2597 113.3931 107.7767 118.9331 112.7617 117.6011 114.2467"></polygon>
+                    <polygon data-light  id="Fill-56" fill="#FFFFFF" points="119.6675 99.1435 120.6625 97.4165 127.1235 101.1395 126.1235 102.8695"></polygon>
+                    <polygon data-light  id="Fill-57" fill="#FFFFFF" points="125.0063 87.6601 125.6223 85.7681 132.7123 88.0641 132.0953 89.9631"></polygon>
+                    <polygon data-light  id="Fill-58" fill="#FFFFFF" points="127.8462 75.3271 128.0512 73.3441 135.4642 74.1121 135.2592 76.1081"></polygon>
+                    <polygon data-light  id="Fill-59" fill="#FFFFFF" points="127.8462 60.6806 135.2562 59.8916 135.4642 61.8896 128.0532 62.6656"></polygon>
+                    <polygon data-light  id="Fill-60" fill="#FFFFFF" points="125.0063 48.3418 132.0953 46.0388 132.7123 47.9398 125.6273 50.2448"></polygon>
+                    <polygon data-light  id="Fill-61" fill="#FFFFFF" points="119.6694 36.8642 126.1234 33.1372 127.1234 34.8662 120.6694 38.6042"></polygon>
+                    <polygon data-light  id="Fill-62" fill="#FFFFFF" points="112.0639 26.7441 117.6009 21.7571 118.9329 23.2421 113.3979 28.2301"></polygon>
+                    <polygon data-light  id="Fill-63" fill="#FFFFFF" points="102.5171 18.4326 106.8921 12.3996 108.5171 13.5736 104.1331 19.6056"></polygon>
+                    <polygon data-light  id="Fill-64" fill="#FFFFFF" points="91.4526 12.2822 94.4746 5.4772 96.3046 6.2852 93.2776 13.0942"></polygon>
+                    <polygon data-light  id="Fill-65" fill="#FFFFFF" points="79.3501 8.5752 80.8931 1.2782 82.8531 1.6962 81.2981 8.9862"></polygon>
                 </g>
             </g>
         </g>
