--- a/_view/controls/svg/index_research.ejs
+++ b/_view/controls/svg/index_research.ejs
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" xmlns="http://www.w3.org/2000/svg"  preserveAspectRatio="xMinYMin meet" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
     <title>Research</title>
     <desc>Created with Sketch.</desc>
@@ -103,7 +102,7 @@
                         <polygon id="Fill-73" fill="#242D3C" mask="url(#mask-2)" points="111.947035 98.4565263 124.855929 98.4565263 124.855929 96.2191579 111.947035 96.2191579"></polygon>
                     </g>
                 </g>
-                <g id="Page-1" transform="translate(425.535156, 93.144531) scale(-1, 1) rotate(-270.000000) translate(-425.535156, -93.144531) translate(378.535156, 25.644531)">
+                <g id="svgPoint" transform="translate(425.535156, 93.144531) scale(-1, 1) rotate(-270.000000) translate(-425.535156, -93.144531) translate(378.535156, 25.644531)">
                     <g id="Group-3" transform="translate(30.000000, 0.529000)">
                         <mask id="mask-4" fill="white">
                             <use xlink:href="#path-3"></use>
@@ -134,7 +133,7 @@
                     <polygon id="Fill-5" fill="#242D3C" mask="url(#mask-10)" points="76.702 172.5 163.275 172.5 163.275 164.837 76.702 164.837"></polygon>
                     <polygon id="Fill-6" fill="#242D3C" mask="url(#mask-10)" points="95.423 164.834 144.565 164.834 144.565 157.169 95.423 157.169"></polygon>
                     <polygon id="Fill-11" fill="#242D3C" mask="url(#mask-10)" points="76.702 137.783 112.331 137.783 112.331 130.116 76.702 130.116"></polygon>
-                    <g id="Group-2" mask="url(#mask-10)">
+                    <g id="svgMicroscope" mask="url(#mask-10)">
                         <g transform="translate(84.000000, 30.000000)">
                             <polygon id="Fill-7" fill="#FFFFFF" points="18.1816 86.5869 4.6526 86.5869 4.6526 77.5779 18.1826 77.5779"></polygon>
                             <polygon id="Fill-8" fill="#FFFFFF" points="0.147 18.959 22.687 18.959 22.687 9.938 0.147 9.938"></polygon>
