--- a/_view/controls/svg/prototypes_faq.ejs
+++ b/_view/controls/svg/prototypes_faq.ejs
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg width="502px" height="192px" viewBox="0 0 502 192" preserveAspectRatio="xMinYMin meet"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
     <title>Mobile</title>
     <desc>Created with Sketch.</desc>
