--- a/css/public.css
+++ b/css/public.css
@@ -51,7 +51,7 @@ ul,li{list-style: none; margin: 0px;}
 /* menu */
 
 /* Banner */
-.banner{  width: 100%;  margin: 0 auto 20px auto;    height: 240px;  background-color: #999;  color: #fff;  position: relative;}
+.banner{  width: 100%;  margin: 0 auto 20px auto; height: 240px;  background-color: #999;  color: #fff;  position: relative;}
 .banner span {  display: block;  height: 20px;  text-align: center;  width: 100%;  margin: 110px 0;}
 .intro{  width: 100%; min-height: 60px; margin-bottom: 20px; clear: both;}
 .intro span { display: block; height: 30px; width: 100%; color: #666; text-align: center; font-size: 20px; margin: 15px 0;}
@@ -59,10 +59,12 @@ ul,li{list-style: none; margin: 0px;}
 /*section blocks */
 .block-wrapper,.block-wrapper2{ width: 100%; margin-bottom: 20px; display: -webkit-flex; -webkit-flex-flow: row;}
 .block-wrapper .sectionBlock,.block-wrapper2 .sectionBlock{ display: block; -webkit-flex:1;border-radius: 6px; position: relative;}
-.sectionBlock .block-bg{position: absolute; top: 0px; left: 0px; width: 100%;  background-position: center; background-repeat: no-repeat; background-size: contain;}
+.sectionBlock .block-bg{position: absolute; top: 0px; left: 0px; width: 100%;  background-position: center; background-repeat: no-repeat; background-size: contain; overflow:hidden;}
 .sectionBlock .list_title{ display: block; font-size:14px; color: white; line-height: 50px; height: 50px; width: 100%; overflow: hidden; font-weight:500;  text-indent: 30px;text-transform: uppercase;  position: absolute; bottom: 0px; left: 0px;background-color: rgba(255,255,255,0.15);}
-.block-wrapper2 .sectionBlock:hover .list_title{color: #242D3C; background-color: rgba(235,235,236,0.95); border-radius: 4px;}
 
+/*
+.block-wrapper2 .sectionBlock:hover .list_title{color: #242D3C; background-color: rgba(235,235,236,0.95); border-radius: 4px;}
+*/
 
 .block-wrapper {height: 301px; }
 .block-wrapper .sectionBlock{height: 301px;}
@@ -78,8 +80,9 @@ ul,li{list-style: none; margin: 0px;}
 .block-wrapper2 .sectionBlock{height: 242px;}
 .block-wrapper2 .last_block{margin-left: 42px;}
 .block-wrapper2 .sectionBlock .block-bg{height: 192px;}
+/*
 .block-wrapper2 .sectionBlock:hover .list_title {transition: height 0.2s,line-height 0.2s; line-height:242px; height:242px;}
-
+*/
 .block-bg svg{width: 100%;position: absolute;}
 
 /*
@@ -150,7 +153,7 @@ ul,li{list-style: none; margin: 0px;}
   
   .wrapper {padding: 0 20px;}
   .breadcrumbs{ padding: 0 20px; margin: 0px; margin-top:30px; height: 50px;}
-  .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 3px; display: none; } /* display none added 081017
+  .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 3px; display: none; } 
 
   .NavContent{ height: 40px;}
   .NavContent .Nav{ height: 40px; }
