--- a/_view/controls/svg/index_prototype.ejs
+++ b/_view/controls/svg/index_prototype.ejs
@@ -1,4 +1,4 @@
-<svg width="1046px" height="251px" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1046 251"  preserveAspectRatio="xMinYMin meet" xmlns:xlink="http://www.w3.org/1999/xlink"> 
+<svg data-svg width="1046px" height="251px" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1046 251"  preserveAspectRatio="xMinYMin meet" xmlns:xlink="http://www.w3.org/1999/xlink"> 
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
 <title>Mobile</title>
     <desc>Created with Sketch.</desc>
