--- a/_view/controls/svg/prototypes_archiving.ejs
+++ b/_view/controls/svg/prototypes_archiving.ejs
@@ -1,4 +1,4 @@
-<svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" preserveAspectRatio="xMinYMin meet"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg data-svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" preserveAspectRatio="xMinYMin meet"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
     <title>Mobile</title>
     <desc>Created with Sketch.</desc>
