--- a/_view/controls/svg/index_research.ejs
+++ b/_view/controls/svg/index_research.ejs
@@ -121,7 +121,7 @@
                         <use xlink:href="#path-7"></use>
                     </mask>
                     <g id="Clip-8"></g>
-                    <polygon id="Fill-7" fill="#242D3C" mask="url(#mask-8)" points="26.798 134.529 93.086 134.529 93.086 107.609 26.798 107.609"></polygon>
+                    <polygon id="Fill-7" fill="#242D3C"  points="26.798 134.529 93.086 134.529 93.086 107.609 26.798 107.609"></polygon>
                 </g>
                 <g id="Page-1" transform="translate(195.000000, 0.000000)">
                     <path d="M119.9912,145.4443 L119.9912,130.1143 C134.4172,130.1143 146.1542,118.3883 146.1542,103.9653 C146.1542,89.5483 134.4172,77.8103 119.9912,77.8103 L119.9912,62.4813 C142.8702,62.4813 161.4872,81.0863 161.4872,103.9653 C161.4872,126.8403 142.8702,145.4443 119.9912,145.4443 Z" id="Fill-1" fill="#FFFFFF"></path>
