--- a/_view/controls/head.ejs
+++ b/_view/controls/head.ejs
@@ -1,6 +1,6 @@
 <title><%= Title %></title>
 <meta charset='utf-8'>
-<link rel="icon" type="image/x-icon" href="<%= Source_img %>fav.ico">
+<link rel="icon" type="image/x-icon" href="<%= Source_img %>favicon.ico">
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
