--- a/_view/controls/map.ejs
+++ b/_view/controls/map.ejs
@@ -1,7 +1,5 @@
 
 <svg width="697px" height="449px" viewBox="0 0 697 449" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 46.2 (44496) - http://www.bohemiancoding.com/sketch -->
-    <desc>Created with Sketch.</desc>
     <defs>
         <polygon id="path-1" points="0 93.4233351 0 0.556026425 237 0.556026425 237 93.4233351 237 186.290644 0 186.290644"></polygon>
         <polygon id="path-3" points="56.6404315 0.100942384 56.6404315 75.5715941 0.0837687515 75.5715941 0.0837687515 0.100942384 56.6404315 0.100942384"></polygon>
@@ -146,7 +144,7 @@
                         <use fill="#F67323" fill-rule="evenodd" xlink:href="#path-5"></use>
                         <path stroke="#FFFFFF" stroke-width="4" d="M49.1395956,141.016093 L68.9598679,127 L219,127 C223.418278,127 227,123.418278 227,119 L227,10 C227,5.581722 223.418278,2 219,2 L10,2 C5.581722,2 2,5.581722 2,10 L2,119 C2,123.418278 5.581722,127 10,127 L49.6290484,127 L49.1395956,141.016093 Z"></path>
                     </g>
-                    <text id="When-the-path-comes" font-size="16" font-weight="300" fill="#FFFFFF">
+                    <text id="When-the-path-comes" class="svg_bubble" font-weight="300" fill="#FFFFFF">
                         <tspan x="21" y="33">When the path comes to an </tspan>
                         <tspan x="21" y="52">end, change.</tspan>
                         <tspan x="21" y="71"></tspan>
@@ -159,7 +157,7 @@
                         <use fill="#F5483F" fill-rule="evenodd" xlink:href="#path-6"></use>
                         <path stroke="#FFFFFF" stroke-width="4" d="M49.1395956,141.016093 L68.9598679,127 L219,127 C223.418278,127 227,123.418278 227,119 L227,10 C227,5.581722 223.418278,2 219,2 L10,2 C5.581722,2 2,5.581722 2,10 L2,119 C2,123.418278 5.581722,127 10,127 L49.6290484,127 L49.1395956,141.016093 Z"></path>
                     </g>
-                    <text id="Know-thy-users.-Fion" font-size="16" font-weight="300" fill="#FFFFFF">
+                    <text id="Know-thy-users.-Fion" class="svg_bubble" font-weight="300" fill="#FFFFFF">
                         <tspan x="21" y="32">Know thy users.</tspan>
                         <tspan x="21" y="51"></tspan>
                         <tspan x="21" y="70"></tspan>
@@ -172,7 +170,7 @@
                         <use fill="#049FD9" fill-rule="evenodd" xlink:href="#path-7"></use>
                         <path stroke="#FFFFFF" stroke-width="4" d="M49.1395956,141.016093 L68.9598679,127 L219,127 C223.418278,127 227,123.418278 227,119 L227,10 C227,5.581722 223.418278,2 219,2 L10,2 C5.581722,2 2,5.581722 2,10 L2,119 C2,123.418278 5.581722,127 10,127 L49.6290484,127 L49.1395956,141.016093 Z"></path>
                     </g>
-                    <text id="I'm-programming-like" font-size="16" font-weight="300" fill="#FFFFFF">
+                    <text id="I'm-programming-like" class="svg_bubble" font-weight="300" fill="#FFFFFF">
                         <tspan x="23" y="31">I'm programming like a </tspan>
                         <tspan x="23" y="50">composer. Are you ready to </tspan>
                         <tspan x="23" y="69">rock?</tspan>
@@ -185,7 +183,7 @@
                         <use fill="#43A942" fill-rule="evenodd" xlink:href="#path-8"></use>
                         <path stroke="#FFFFFF" stroke-width="4" d="M49.1395956,141.016093 L68.9598679,127 L219,127 C223.418278,127 227,123.418278 227,119 L227,10 C227,5.581722 223.418278,2 219,2 L10,2 C5.581722,2 2,5.581722 2,10 L2,119 C2,123.418278 5.581722,127 10,127 L49.6290484,127 L49.1395956,141.016093 Z"></path>
                     </g>
-                    <text id="I-like-prototyping," font-size="16" font-weight="300" fill="#FFFFFF">
+                    <text id="I-like-prototyping," class="svg_bubble" font-weight="300" fill="#FFFFFF">
                         <tspan x="21" y="31">I like prototyping, video </tspan>
                         <tspan x="21" y="50">games and tortoises.</tspan>
                         <tspan x="21" y="69"></tspan>
