--- a/_view/controls/map.ejs
+++ b/_view/controls/map.ejs
@@ -1,7 +1,17 @@
 
 <svg width="697px" height="449px" viewBox="0 0 697 449" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 46.2 (44496) - http://www.bohemiancoding.com/sketch -->
-    <desc>Created with Sketch.</desc>
+   <pattern id='parrten_damon' x="0" y="0" width="1" height="1">
+            <image xlink:href='<%= Source_img_atricle %>avatar/damon.png' x='7' y='9' width='43' height='43' />
+        </pattern>
+        <pattern id='parrten_arthus' x="0" y="0" width="1" height="1">
+            <image xlink:href='<%= Source_img_atricle %>avatar/arthus.png' x='9' y='7' width='43' height='43' />
+        </pattern>
+        <pattern id='parrten_azure' x="0" y="0" width="1" height="1" >
+            <image xlink:href='<%= Source_img_atricle %>avatar/azure.png' x='8' y='7' width='43' height='43' />
+        </pattern>
+        <pattern id='parrten_fiona' x="0" y="0" width="1" height="1" >
+            <image xlink:href='<%= Source_img_atricle %>avatar/fiona.png' x='9' y='8' width='43' height='43' />
+        </pattern>
     <defs>
         <polygon id="path-1" points="0 93.4233351 0 0.556026425 237 0.556026425 237 93.4233351 237 186.290644 0 186.290644"></polygon>
         <polygon id="path-3" points="56.6404315 0.100942384 56.6404315 75.5715941 0.0837687515 75.5715941 0.0837687515 0.100942384 56.6404315 0.100942384"></polygon>
@@ -194,8 +204,8 @@
             </g>
         </g>
     </g>
-    <circle data-tf='arthus' cx='600' cy='200' r='30' fill='url(#parrten_arthus)' stroke="#F15424" stroke-width="4"></circle>
-    <circle data-tf='azure' cx='662' cy='240' r='30' fill='url(#parrten_azure)' stroke="#F15424" stroke-width="4"></circle>
-    <circle data-tf='fiona' cx='35' cy='225' r='30' fill='url(#parrten_fiona)' stroke="#F15424" stroke-width="4"></circle>
-    <circle data-tf='damon' cx='245' cy='255' r='30' fill='url(#parrten_damon)' stroke="#F15424" stroke-width="4"></circle>
+    <circle data-tf='arthus' cx='600' cy='200' r='30' fill='url(#parrten_arthus)'></circle>
+    <circle data-tf='azure' cx='662' cy='240' r='30' fill='url(#parrten_azure)'></circle>
+    <circle data-tf='fiona' cx='35' cy='225' r='30' fill='url(#parrten_fiona)'></circle>
+    <circle data-tf='damon' cx='245' cy='255' r='30' fill='url(#parrten_damon)'></circle>
 </svg>
