--- a/_view/team.ejs
+++ b/_view/team.ejs
@@ -26,7 +26,7 @@
         <div class="mobileBio">
           <!-- Damon -->
           <div class="teamBio">
-            <div class="bioImg"><img src="<%= Source_img_atricle %>avatar/Damon Daood.png"></div>
+            <div class="bioImg"><img src="<%= Source_img_atricle %>avatar/damon.png"></div>
             <blockquote>
             <footer>
             <q>When the path comes to an end, change.</q>
